[package]
name = "oleaf-hook-macros"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/project-yggdrasil/oleaf"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
