[package]
name = "oleaf-hook"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/project-yggdrasil/oleaf"
edition = "2021"

[dependencies]
detour = "0.8.0"
static_assertions = "1"

[dependencies.windows]
version = "0.32"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]
