[package]
name = "oleaf"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/project-yggdrasil/oleaf"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oleaf-hook = { path = "../oleaf-hook" }

# Don't remove these dependencies for `oleaf-hook-macros`.
detour = "0.8"
linkme = "0.2"

[dependencies.windows]
version = "0.32"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
